--- a/history.txt
+++ b/history.txt
@@ -75,3 +75,135 @@
    75  pwd
    76  history
    77  history > history.txt
+   78  ls
+   79  ls -la
+   80  cat history
+   81  cat history.txt
+   82  nm-connection-editor 
+   83  cd Documents
+   84  cd darbi
+   85  pwd
+   86  ls -la
+   87  git init
+   88  sudo apt install git
+   89  ls
+   90  git init
+   91  git add.
+   92  git add .
+   93  git config --global user.name arnolds.slionskis@gmail.com
+   94  ls -la
+   95  git commit -m "2017.09.13_14:00"
+   96  git config --global user.email arnolds.slionskis@gmail.com
+   97  ls -la
+   98  git commit -m "2017.09.13_14:00"
+   99  git remote add origin https://github.com/ArnoldSlionskis/DMI.git
+  100  git push origin master
+  101  cd ..
+  102  ls
+  103  cd ..
+  104  cd Documents
+  105  cd darbi
+  106  mkdir ApaksDarbi
+  107  la -l
+  108  cd ApaksDarbi
+  109  history > vesture.txt
+  110  ls
+  111  cd..
+  112  cd ..
+  113  ls -l
+  114  rmdir ApaksDarbi
+  115  men rmdir
+  116  man rmdir
+  117  rm ApaksDarbi/
+  118  rm ApaksDarbi
+  119  man rm
+  120  rm -r ApaksDarbi
+  121  ls -l
+  122  ls -la
+  123  cd /
+  124  ls
+  125  cd
+  126  ls -la
+  127  ls -l
+  128  nano
+  129  x=10
+  130  echo x is $x
+  131  echo -e you /eare /ea /efucking /epleb
+  132  echo -e "you /eare /ea /efucking /epleb"
+  133  echo -e "you /bare /ba /bfucking /bpleb"
+  134  echo -e "you \bare \ba \bfucking \bpleb"
+  135  echo -e "Learn \nto \nfucking \nprogram"
+  136  echo -e "Big \tFucking \tSpaces"
+  137  echo -e "You \aFucking pleb"
+  138  echo *
+  139  echo "Test1" > test
+  140  ls
+  141  cat test
+  142  rm test
+  143  ls
+  144  cd music
+  145  cd Music
+  146  ls
+  147  ls-la
+  148  ls -la
+  149  cd ..
+  150  echo test \ntest
+  151  echo -e "test1\bTest"
+  152  echo -e "\n\tTecmint \n\tis \n\ta \n\tcommunity \n\tof \n\tLinux \n\tNerds"
+  153  echo -e "Tecmint is a community of \aLinux Nerds"
+  154  echo *
+  155  echo "test" > test1
+  156  ls
+  157  cat test1
+  158  rm test1
+  159  ls
+  160  echo "test" > test
+  161  ls -l
+  162  rm test
+  163  ls -l
+  164  man ls > ls_komandas_apraksts
+  165  ls -la
+  166  ls -l
+  167  cat ls_komandas_apraksts
+  168  ls -l
+  169  echo "test" > a.txt
+  170  cat a.txt > d.txt
+  171  echo "test2" > b.txt
+  172  cat b.txt > a.txt
+  173  cat .txt
+  174  cat a.txt
+  175  cat d.txt
+  176  cat a.txt > d.txt
+  177  cat b.txt >> d.txt
+  178  ls -l
+  179  cat d.txt
+  180  cp d.txt dd.txt
+  181  ls -l
+  182  man cp
+  183  cp a.txt Documents/c2.txt
+  184  cd Documents
+  185  ls
+  186  cat darbi
+  187  car c2.txt
+  188  cat c2.txt
+  189  rm c2.txt
+  190  cd ..
+  191  ls
+  192  ls -l
+  193  man m
+  194  man move
+  195  man mo
+  196  cd /
+  197  mv ~/a.txt Documents/
+  198  ls -l
+  199  mv ~/a.txt ~/Documents/
+  200  cd ~
+  201  cd Documents
+  202  ls
+  203  rm a.txt
+  204  cd datbi
+  205  cd darbi
+  206  ls
+  207  ls -la
+  208  git add .
+  209  history > history.txt
